WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54741
[Qt] Regression : on www.gmail.com a strange rendering issue appears on the menu bar due to flash.
https://bugs.webkit.org/show_bug.cgi?id=54741
Summary
[Qt] Regression : on www.gmail.com a strange rendering issue appears on the m...
Alexis Menard (darktears)
Reported
2011-02-18 04:57:23 PST
The patch (
http://trac.webkit.org/changeset/67516
) introduce the "regression". Actually to me it was not working before but the bug fixed by the patch reveals it. On GMail.com there is a flash plugin loaded to play the sound of the chat. <embed id="flash_object" src="im/chatsound.swf" style="position:absolute;top:0px;left:0px;height:0px;width:0px;" quality="high" pluginspage="
http://www.macromedia.com/go/getflashplayer
" type="application/x-shockwave-flash"> The height and the width are 0. There is nothing to render and QX11EmbedContainer and all the X plumbing we have seem to be very confuse about that. My patch propose to not show the plugins with a height or a width null. Anyway even before 67516 you could see flicker on the menu bar and now with the patch it's totally clean. I've tested that the sound is still played :).
Attachments
Patch to fix the plugin rendering issues.
(1.77 KB, patch)
2011-02-18 05:04 PST
,
Alexis Menard (darktears)
kling
: review+
kling
: commit-queue-
Details
Formatted Diff
Diff
Updated version which try to make kenneth(patch) == true
(1.78 KB, patch)
2011-02-18 05:30 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-02-18 05:04:34 PST
Created
attachment 82945
[details]
Patch to fix the plugin rendering issues. Please give me feedback on that one and add to commit queue.
Alexis Menard (darktears)
Comment 2
2011-02-18 05:07:40 PST
***
Bug 52658
has been marked as a duplicate of this bug. ***
Andreas Kling
Comment 3
2011-02-18 05:19:57 PST
Comment on
attachment 82945
[details]
Patch to fix the plugin rendering issues. View in context:
https://bugs.webkit.org/attachment.cgi?id=82945&action=review
r=me, but my inner kenneth has some complaints :)
> Source/WebCore/ChangeLog:5 > + [Qt] Regression : on www.gmail.com a strange rendering issue appears on the
If you know which commit caused the regression, we typically put something like "REGRESSION(
r12345
): Bla bla bla."
> Source/WebCore/ChangeLog:6 > + menu bar due to flash.
<kenneth>Extra space before "menu"!</kenneth>
> Source/WebCore/ChangeLog:10 > + Only show plugins with a valid size. We then avoid X in the game if there is > + nothing to see anyway.
s/X/involving X11/ for clarity.
> Source/WebCore/plugins/qt/PluginViewQt.cpp:144 > + // The plugin had a zero width or height before but was resized, we need to show it again
<kenneth>Needs period at end of sentence.</kenneth>
> Source/WebCore/plugins/qt/PluginViewQt.cpp:949 > + // If the width and the height are not zero we show the pluginView
<kenneth>Needs period at end of sentence.</kenneth> Also, s/pluginView/PluginView/
Alexis Menard (darktears)
Comment 4
2011-02-18 05:30:59 PST
Created
attachment 82947
[details]
Updated version which try to make kenneth(patch) == true
WebKit Commit Bot
Comment 5
2011-02-18 19:31:35 PST
Comment on
attachment 82947
[details]
Updated version which try to make kenneth(patch) == true Clearing flags on attachment: 82947 Committed
r79074
: <
http://trac.webkit.org/changeset/79074
>
WebKit Commit Bot
Comment 6
2011-02-18 19:31:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug